--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -64,6 +64,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
+  z-index: 1;
 }
 
 .logo:link,
@@ -84,6 +85,7 @@
   line-height: 1.25;
   color: var(--color-grey-dark-3);
   letter-spacing: 1px;
+  z-index: 1;
 }
 
 .nav {
